--- a/MERN/Class-1-18-Oct/index.html
+++ b/MERN/Class-1-18-Oct/index.html
@@ -4,16 +4,124 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <style>
-      body {
-        font-family: Arial, Helvetica, sans-serif;
-        margin: 20px;
-        background-color: blue;
-      }
-    </style>
+    <link rel="stylesheet" href="./position.css" />
   </head>
   <body>
-    <h1>Hello World</h1>
-    <p>This is a paragraph</p>
+    <div class="box">
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates
+        maiores itaque pariatur perspiciatis ab nisi nobis quia nesciunt
+        asperiores illo earum debitis consequuntur, alias totam aspernatur ut
+        obcaecati incidunt veniam architecto sunt. Quaerat ipsum mollitia error
+        non nemo nostrum sit natus maxime quos voluptate, eaque recusandae
+        tempore excepturi repudiandae, suscipit numquam ducimus. Ad a error
+        officia repellat saepe architecto. Reiciendis debitis autem, placeat
+        fugit architecto, fuga nesciunt dicta similique iusto in impedit. Sit
+        laborum laudantium nostrum nam voluptate ab eligendi, aliquam dolor
+        voluptates expedita, perferendis voluptatibus quos doloremque obcaecati
+        molestias cumque repellendus quae ipsum provident assumenda error veniam
+        nihil suscipit? Earum quidem maxime nisi fugit laborum, ab eligendi
+        assumenda recusandae corrupti praesentium quasi cum incidunt tenetur
+        repellendus? Reiciendis vel eveniet perferendis quibusdam odit laborum
+        aperiam praesentium quod nihil nemo libero neque quos laboriosam
+        necessitatibus in repellendus quas, a molestiae. Temporibus soluta in ut
+        asperiores incidunt sit aspernatur architecto ratione, porro est laborum
+        nostrum exercitationem obcaecati nesciunt. Cum repudiandae voluptas,
+        laborum, omnis nobis id labore recusandae tempora exercitationem maxime
+        nemo asperiores, ipsum totam natus. Quos ut quas vel sunt qui
+        necessitatibus reprehenderit perferendis ducimus tempore. Temporibus
+        natus doloremque, atque dolore quae et culpa nisi, consectetur accusamus
+        fugit molestiae a, reprehenderit perferendis vero nam asperiores sint
+        aliquid dolorem deleniti consequatur! At fugiat quam similique incidunt
+        deleniti libero quibusdam earum, dicta magnam numquam laborum facilis
+        quas id molestias? Sed voluptatum et totam quas nam? Dolore corrupti
+        sequi possimus molestiae. Repellendus officiis veritatis quidem commodi
+        alias. Iusto possimus corporis aut architecto, at beatae commodi sed
+        alias! Eaque vitae voluptas sequi at omnis. Soluta, fugiat magnam
+        nesciunt iure inventore a maxime tempora obcaecati hic voluptatum ipsam
+        ullam quidem incidunt officia voluptas laudantium facere reiciendis
+        alias laboriosam repellat quisquam voluptate architecto sint.
+        Doloremque, nemo tenetur? Accusamus aliquam modi deleniti aspernatur in
+        voluptatum sed similique doloribus unde possimus, natus quo provident
+        aperiam perspiciatis voluptatem aut voluptates harum sit expedita quae
+        maxime nostrum assumenda quos placeat! Excepturi nesciunt, maiores quae
+        ratione molestias explicabo labore possimus sit culpa. Quas sint
+        corrupti, adipisci unde vitae, ab quaerat aliquam dignissimos, illo in
+        velit explicabo. Deleniti earum dolorem exercitationem nam cumque illo
+        repellat eaque assumenda eius vel suscipit fugit ipsum, adipisci
+        explicabo nesciunt repellendus et odit sed minima ipsam dolore quod?
+        Optio quas obcaecati hic repellendus possimus, excepturi est ipsum enim
+        deserunt beatae dolorem culpa aspernatur molestias impedit, accusantium
+        tempore alias fugiat soluta provident similique mollitia ad sapiente id
+        dolor! Magni perferendis sapiente libero doloremque! Porro quia aliquam
+        quos dicta! Eaque repellendus alias eveniet quis, atque molestias sed,
+        iure consequuntur ipsum temporibus magnam placeat quas nihil cum
+        blanditiis iste aperiam ratione nam sequi at doloribus! Repudiandae
+        aperiam rem veritatis maxime facere eligendi itaque. Nostrum vitae
+        dolore possimus quidem facere illum eveniet quis doloribus fugiat sunt a
+        atque sequi harum, quo recusandae dolorem repellat suscipit perspiciatis
+        modi quae perferendis! Animi qui, incidunt accusantium dignissimos minus
+        doloribus est saepe fuga vero dolores facere, perferendis enim
+        reiciendis at maiores corporis soluta vel id ullam labore cupiditate
+        laboriosam. Fugit cum deserunt totam ullam unde magni voluptatibus
+        obcaecati vel explicabo exercitationem dolore officia accusantium quis a
+        consequatur nihil aut quaerat at laboriosam quisquam, nostrum eius
+        perferendis. Repellendus voluptatem doloribus eius dolorum molestiae?
+        Deleniti ad delectus sequi sint ut tempora ratione. Obcaecati corporis
+        magni consectetur, culpa mollitia ad veniam perspiciatis porro adipisci
+        architecto nulla natus numquam quae aliquid harum dolores, quisquam amet
+        dolorem nam delectus. Vitae, qui. Mollitia, voluptatibus incidunt
+        pariatur ipsam dicta delectus minima, vero optio eius architecto eveniet
+        autem nobis soluta neque aspernatur sed id! Itaque magni iusto ex libero
+        quam natus facere eius, quae non expedita at distinctio cupiditate harum
+        asperiores doloribus cumque. Eaque harum non nihil est rerum, sint quam!
+        Quisquam sed ipsum eius reiciendis architecto tempora consequatur
+        similique aliquid blanditiis doloribus consequuntur quia exercitationem
+        adipisci, natus fugiat et alias ducimus ipsa corporis deserunt maxime
+        mollitia saepe repellat. Dolores explicabo optio necessitatibus, eaque
+        nostrum eos at cupiditate tenetur adipisci sequi vel ducimus officia
+        commodi voluptatum quaerat consectetur itaque. Aliquam, sequi. Atque
+        praesentium dolores libero voluptas, minus ad quam soluta, fugiat sunt
+        repellendus totam, facere sed provident! Minus repudiandae, modi impedit
+        voluptate possimus consequatur vel repellendus ad ipsa, dolorem a fuga
+        amet omnis totam unde error, necessitatibus eveniet rem cum explicabo
+        corrupti qui similique obcaecati. Quis similique ad eos aliquid quidem
+        esse. Amet commodi quis beatae fugit maiores velit natus fuga
+        praesentium, explicabo vel quibusdam. Quasi dolorem autem assumenda eos
+        magni sit voluptate, minima, esse laboriosam, eligendi iure optio
+        tempore tenetur repellendus sequi minus quis qui consectetur aperiam?
+        Laudantium soluta minima ipsam nihil neque illo iusto impedit nisi!
+        Nemo, quaerat laboriosam! Reiciendis corrupti laborum aliquam placeat
+        possimus, quos officia, explicabo vel ut quasi exercitationem quae porro
+        excepturi. Nobis sit esse nemo, optio doloremque rem quo eius ab
+        veritatis perferendis ratione nihil iusto laboriosam vitae ad neque
+        exercitationem impedit aspernatur porro nisi temporibus, dolores quae
+        labore vel. Rerum inventore minima in enim quo? Doloribus impedit
+        explicabo, esse reiciendis voluptatum molestias nisi porro dolorum
+        possimus harum, eos debitis eveniet neque aut! Molestias laborum
+        voluptatem, animi deleniti, recusandae nesciunt libero quae adipisci
+        amet nemo voluptates. Nesciunt, doloremque dolor? Voluptates rem
+        adipisci dignissimos saepe reprehenderit tempore veniam mollitia
+        perferendis, laboriosam molestiae voluptatum neque beatae accusamus quis
+        qui fugiat atque itaque culpa ipsum nobis omnis quam voluptas deleniti
+        labore! Necessitatibus veritatis iste harum quod, voluptatem pariatur
+        vero ratione sint, odit commodi et! Quas, molestiae? Voluptate magni
+        sequi expedita facere ipsum ad quaerat ab molestiae ex laudantium
+        tempore explicabo quibusdam repellendus ut et suscipit autem, quod culpa
+        odio debitis corporis atque commodi? Enim cumque sunt delectus, qui
+        harum sint totam sed dolorum laudantium minus magni soluta maxime, a est
+        vero. Quod, qui provident. Tempora ab veniam magnam animi ullam esse
+        illum, culpa, quibusdam officia cumque, tenetur placeat. Doloribus
+        pariatur, sit ducimus quis reiciendis deserunt placeat excepturi
+        mollitia, tenetur, corporis necessitatibus commodi facilis sunt. Quo
+        ducimus explicabo animi, dicta odit, minus incidunt nihil in quos
+        aliquam harum error possimus maiores? Cum placeat fuga eaque nemo,
+        tempore ullam nihil facilis. Natus veniam dolores repellat, illum sit
+        amet cupiditate consectetur ipsam, exercitationem accusantium corporis?
+      </p>
+      <div class="circle red"></div>
+      <div class="circle green"></div>
+      <div class="circle blue"></div>
+    </div>
   </body>
 </html>
